# My_midterm_project

./: CMakeLists.txt  README.md
inc/: MyClass.h
src/: MyClass.cpp  main.cpp
